Aside width bug on IE.

--- a/css/style.css
+++ b/css/style.css
@@ -1024,7 +1024,7 @@ max-width : 100%; }
 
 aside {
 float : right;
-width : 22.56%;
+width : 22.55%;
 border-bottom : 0; }
 
 aside li, aside p {
